k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-deployment
  labels:
    app: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      containers:
        - name: task-manager-container
          image: ashyshyma/task-manager:latest
          ports:
            - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-deployment
  labels:
    app: audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit
  template:
    metadata:
      labels:
        app: audit
    spec:
      containers:
        - name: audit-container
          image: ashyshyma/audit:latest
          ports:
            - containerPort: 8081
