k8s/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
spec:
  rules:
    - host: task-manager.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-manager-service
                port:
                  number: 8080
